# Neutron

./: .gitignore  CMakeLists.txt  README.md
RADIOAna/: CMakeLists.txt  CaptureAnalyzer.hh  Neutron.hh  RADIOAna.cxx  README  README.md  ValidationAnalyzer.hh  XMLParser.hh  config.xml
RADIOAna/Analyzers/: CaptureAnalyzer.hh  ValidationAnalyzer.hh
RADIOAna/Configurations/: config.xml
RADIOAna/Utilities/: Helper.h  ProgressTable.hh  XMLParser.hh
eventDisplay/: AllTPCs.cxx  ArbitraryAnaInputManager.hh  CMakeLists.txt  DisplayEventInformation.cxx  DumpWaveform.cxx  EventDisplay.cxx  Hit.hh  InputManager.hh  MCC11Display.cxx  MiniDisplay.cxx  PrintRawDigits.cxx  RawEventInformation.cxx  RunEventDisplay.cxx  TPCHeatMap.cxx  old_RunEventDisplay.cxx
hitfinders/: AnalyseArbitraryAna.cxx  AnalyseHitFinder.cxx  AnalyseProtoDUNE.cxx  CMakeLists.txt  CompareIdealWithReal.cxx  DataAnaInputManager.hh  EfficiencyCalculator.cxx  Helper.h  HitFinderBattleRoyale.cxx  MultiEfficiencyCalculator.cxx
neutrons/: AnalyseCaptureRate.cxx  CMakeLists.txt  Capture.hh  InputManager.hh
python/: plotHits.py
