cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/neutrons)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hitfinders)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/eventDisplay)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/RADIOAna)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
