cmake_minimum_required(VERSION 3.6)
project(eventDisplay CXX)
find_package( ZLIB REQUIRED )
include_directories($ENV{BOOST_INC})
include_directories($ENV{CANVAS_INC})
include_directories($ENV{CANVAS_ROOT_IO_INC})
include_directories($ENV{CETLIB_EXCEPT_INC})
include_directories($ENV{CETLIB_INC})
include_directories($ENV{FHICLCPP_INC})
include_directories($ENV{GALLERY_INC})
include_directories($ENV{LARCOREOBJ_INC})
include_directories($ENV{LARDATAOBJ_INC})
include_directories($ENV{NUSIMDATA_INC})
include_directories($ENV{ROOT_INC})
include_directories($ENV{HEP_CONCURRENCY_INC})
link_directories($ENV{ROOTSYS}/lib $ENV{CANVAS_LIB} $ENV{CETLIB_EXCEPT_LIB} $ENV{CETLIB_LIB} $ENV{GALLERY_LIB} $ENV{NUSIMDATA_LIB} $ENV{LARCOREOBJ_LIB} $ENV{LARDATAOBJ_LIB} $ENV{BOOST_LIB})

add_executable(RunEventDisplay RunEventDisplay.cxx)
set_property(TARGET RunEventDisplay PROPERTY CXX_STANDARD 17)
target_link_libraries(RunEventDisplay Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase boost_program_options ${ZLIB_LIBRARIES})

add_executable(DisplayEventInformation DisplayEventInformation.cxx)
set_property(TARGET DisplayEventInformation PROPERTY CXX_STANDARD 17)
target_link_libraries(DisplayEventInformation Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase boost_program_options ${ZLIB_LIBRARIES})

add_executable(MiniDisplay MiniDisplay.cxx)
set_property(TARGET MiniDisplay PROPERTY CXX_STANDARD 17)
target_link_libraries(MiniDisplay Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase boost_program_options ${ZLIB_LIBRARIES})
