cmake_minimum_required(VERSION 3.6)
project(eventDisplay CXX)
find_package( ZLIB REQUIRED )
include_directories($ENV{BOOST_INC})
include_directories($ENV{CANVAS_INC})
include_directories($ENV{CANVAS_ROOT_IO_INC})
include_directories($ENV{CETLIB_EXCEPT_INC})
include_directories($ENV{CETLIB_INC})
include_directories($ENV{FHICLCPP_INC})
include_directories($ENV{GALLERY_INC})
include_directories($ENV{LARCOREOBJ_INC})
include_directories($ENV{LARDATAOBJ_INC})
include_directories($ENV{NUSIMDATA_INC})
include_directories($ENV{ROOT_INC})
include_directories($ENV{HEP_CONCURRENCY_INC})
link_directories($ENV{ROOTSYS}/lib $ENV{CANVAS_LIB} $ENV{CETLIB_EXCEPT_LIB} $ENV{CETLIB_LIB} $ENV{GALLERY_LIB} $ENV{NUSIMDATA_LIB} $ENV{LARCOREOBJ_LIB} $ENV{LARDATAOBJ_LIB} $ENV{BOOST_LIB})

add_executable(RunEventDisplay RunEventDisplay.cxx)
set_property(TARGET RunEventDisplay PROPERTY CXX_STANDARD 17)
target_link_libraries(RunEventDisplay Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase lardataobj_RawData boost_program_options ${ZLIB_LIBRARIES})

add_executable(DisplayEventInformation DisplayEventInformation.cxx)
set_property(TARGET DisplayEventInformation PROPERTY CXX_STANDARD 17)
target_link_libraries(DisplayEventInformation Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase boost_program_options ${ZLIB_LIBRARIES})

add_executable(MiniDisplay MiniDisplay.cxx)
set_property(TARGET MiniDisplay PROPERTY CXX_STANDARD 17)
target_link_libraries(MiniDisplay Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase boost_program_options ${ZLIB_LIBRARIES})

add_executable(MCC11Display MCC11Display.cxx)
set_property(TARGET MCC11Display PROPERTY CXX_STANDARD 17)
target_link_libraries(MCC11Display Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase boost_program_options ${ZLIB_LIBRARIES})

add_executable(DumpWaveform DumpWaveform.cxx)
set_property(TARGET DumpWaveform PROPERTY CXX_STANDARD 17)
target_link_libraries(DumpWaveform Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase boost_program_options ${ZLIB_LIBRARIES})

add_executable(PrintRawDigits PrintRawDigits.cxx)
set_property(TARGET PrintRawDigits PROPERTY CXX_STANDARD 17)
target_link_libraries(PrintRawDigits Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase lardataobj_RawData boost_program_options ${ZLIB_LIBRARIES})

add_executable(TPCHeatMap TPCHeatMap.cxx)
set_property(TARGET TPCHeatMap PROPERTY CXX_STANDARD 17)
target_link_libraries(TPCHeatMap Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase lardataobj_RawData boost_program_options ${ZLIB_LIBRARIES})

add_executable(RawEventInformation RawEventInformation.cxx)
set_property(TARGET RawEventInformation PROPERTY CXX_STANDARD 17)
target_link_libraries(RawEventInformation Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase lardataobj_RawData boost_program_options ${ZLIB_LIBRARIES})

add_executable(EventDisplay EventDisplay.cxx)
set_property(TARGET EventDisplay PROPERTY CXX_STANDARD 17)
target_link_libraries(EventDisplay Core RIO Net Hist Graf Graf3d Gpad Tree Rint Postscript Matrix Physics MathCore Thread MultiProc pthread canvas cetlib_except cetlib gallery nusimdata_SimulationBase larcoreobj_SummaryData lardataobj_RecoBase lardataobj_RawData boost_program_options ${ZLIB_LIBRARIES})
